umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@basic_h.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: basic
atom_typing:
  success: true
  summary:
    atom_count: 1
    bond_count: 0
    topology: "@"
    atoms:
      - "{H^1}"
    bonds: []
counts:
  success: true
  summary:
    atom_count: 1
    bond_count: 0
    topology: "@"
    atoms:
      - "{H^1}"
    bonds: []
