umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@basic_hf.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: basic
atom_typing:
  success: true
  summary:
    atom_count: 2
    bond_count: 1
    topology: A_
    atoms:
      - "{F/3v1}"
      - "{Hv1}"
    bonds:
      - "-"
counts:
  success: true
  summary:
    atom_count: 2
    bond_count: 1
    topology: A_
    atoms:
      - "{F/3v1}"
      - "{Hv1}"
    bonds:
      - "-"
