umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_2-pyrrolidone.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 6
    bond_count: 6
    topology: Eoag
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{NH/1v2}"
      - "{CH2v2}"
      - "{Cv4}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 6
    topology: Eoag
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{NH/1v2}"
      - "{CH2v2}"
      - "{Cv4}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
