umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_acetaldehyde-hydrazone.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: false
  error:
    error_type: ValenceAmbiguous
    message: "Valence ambiguous for atom N at index 2 has 2 valence matches: {N/1v3}, {Nv3a2}"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "{CH3v1}"
      - "{CHv3}"
      - "{N/1v3}"
      - "{NH2/1v1}"
    bonds:
      - "-"
      - "="
      - "-"
