umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_acetaldehyde.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: carbonyl_derivatives
atom_typing:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bg
    atoms:
      - "{CH3v1}"
      - "{CH1v3}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bg
    atoms:
      - "{CH3v1}"
      - "{CH1v3}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "="
